# mds-ach

./: .gitignore  Instructions.odt  LICENSE  Makefile  mds-demo.sh
collision_checker/: CMakeLists.txt  mds-collision-checker-gazebo5.cc  mds-collision-checker.cc  mds_collision_checker.cc
configs/: Isaac.anatomy.xml  Isaac.head.anatomy.xml  Lucas.anatomy.xml  Lucas.head.anatomy.xml  Octavia.anatomy.xml  Octavia.head.anatomy.xml  anatomy.xml  mdsach.mds  mdsach.xml  nrl001.xml  nrl002.xml  nrl003.xml
configs/server/: head.server.xml  homed.head.server.xml  homed.server.xml  server.log4cpp.properties  server.xml
examples/: mds_ik_box_example.py  mds_ik_one.py  mds_ik_solver_example.py  mds_simple_demo_python.py  mds_simple_demo_python_1_DOF.py  mds_simple_demo_state_feedback.py
examples/listener/: CMakeLists.txt  listener.cc
include/: CANAddresses.h  CANCommon.h  CommandNode.h  DynamicSmoothTrajectory.h  Kbhit.h  ParseCMDLine.h  XitomeMCBCommandParser.h  XitomeMCBCommands.h  mds-socketcan.h  mds.h
include/can/: CommandList.h  Delay.h  KVCANCommon.h  XitomeMCBCommands.h  strcmp.h
logging/: logpid_all.sh  logpid_collision.sh  logpid_gzserver.sh  mds-ach_all.ods  mds-collision-checker.log.test1
logs/: mds-LEB.-45-0deg.r2  mds-LEB.0--45deg.r2  mds-LEB.0-30deg.r2  mds-LEB.0-45deg.r2  mds-LEB.0deg  mds-LEB.30-0deg.r2  mds-LEB.30deg  mds-nky.0deg  mds-nky.25deg
mds-filter/: Makefile  mds-simple-demo
mds-filter/src/: mds-filter-commented.c  mds-simple-demo.c  mds-simple-demo.c~  mds_plot.py
mds-orig-files/parser/: DemoClient.cpp
model/: contact-mds.world  contact.world  model.sdf
model/mds/: CMakeLists.txt  ContactPlugin.cc  manifest.xml  mds_plugin.cc  model.config  model.sdf  model.world
python/: example-state-mds-ach.py  mds_1.py  mds_ach.py  mds_ach.py~  mds_console.py  mds_console.py~  mds_console_backup.py  mds_fk.py  mds_ik.py  mds_ik.py~  mds_ik_box_example.py  mds_ik_include.py  mds_ik_module.py  mds_ik_module.py~  mds_plot.py  mds_read.py  mds_ref_sign.py  mds_ref_sin.py  mds_xml_parser.py
scripts/: install-gazebo.sh  install-mds-ach.sh  install.sh  mds-ach
src/: XitomeMCBCommandParser.c  mds-daemon.c  mds-filter.c  mds-socketcan.c
(+77 files in other folders)
